[package]
name = "maxmind_db_rust"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Oschwald <oschwald@gmail.com>"]
description = "Rust-based Ruby binding for MaxMind DB - high-performance alternative to maxmind-db"
license = "ISC"
repository = "https://github.com/oschwald/maxmind-db-rust-ruby"

[lib]
name = "maxmind_db_rust"
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.7"
ipnetwork = "0.21"
magnus = "0.8"
maxminddb = { version = "0.26.0", features = ["unsafe-str-decode"] }
memmap2 = "0.9"
serde = "1.0"